# NeuralNetwork

FeretFaceInputProcessor/: CMakeCache.txt  CMakeLists.txt  FeretFaceInputProcessor.kdev4  InitialNetBuilder.cpp  Makefile  Recording.cpp  Recording.hpp  cmake_install.cmake  feretfaceinputprocessor  initialNetBuilder  initialNetwork  main.cpp
FeretFaceInputProcessor/.kdev4/: FeretFaceInputProcessor.kdev4
FeretFaceInputProcessor/include/pugixml-1.7/src/: CMakeLists.txt  Makefile  cmake_install.cmake
NeuralNet/: CMakeLists.txt  Example.cpp  Example.hpp  ExampleContainer.cpp  ExampleContainer.hpp  InputHelper.cpp  InputHelper.hpp  NeuralNetsTest.cpp  NeuralNetsTrain.cpp  Node.cpp  Node.hpp  ThreeLayerNetwork.cpp  ThreeLayerNetwork.hpp  main.cpp
